--- a/UsingVSPDforWI.Rnw
+++ b/UsingVSPDforWI.Rnw
@@ -1,4 +1,4 @@
-%% LyX 2.1.3 created this file.  For more info, see http://www.lyx.org/.
+%% LyX 2.1.4 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
 \documentclass[12pt]{article}
 \usepackage{mathptmx}
@@ -18,6 +18,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% LyX specific LaTeX commands.
 %% Because html converters don't know tabularnewline
 \providecommand{\tabularnewline}{\\}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
+\newenvironment{lyxcode}
+{\par\begin{list}{}{
+\setlength{\rightmargin}{\leftmargin}
+\setlength{\listparindent}{0pt}% needed for AMS classes
+\raggedright
+\setlength{\itemsep}{0pt}
+\setlength{\parsep}{0pt}
+\normalfont\ttfamily}%
+ \item[]}
+{\end{list}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
 \input colordvi
@@ -112,15 +124,45 @@ VSPD is the vertical aircraft speed, or rate of climb, provided by
 the IRU. The IRUs in use on both aircraft use updating to the pressure
 altitude to control the known instability that arises from integrating
 vertical acceleration to get rate-of-climb. As a result, the rate-of-climb
-represented by VSPD is with reference to a standard atmosphere, and
+represented by VSPD is adjusted to match a standard atmosphere, and
 if the atmospheric stratification differs from the standard atmosphere
 the resulting rate-of-climb will not be the geometric-altitude rate
 of climb, as needed for the calculation of vertical wind.
 
+This can be seen best from the hydrostatic equation, expressed as 
+
+\[
+\frac{dz}{dp}=-\frac{R_{a}T}{pg}
+\]
+
+
+Then 
+
+\[
+w=\frac{dz}{dt}=-\frac{R_{d}T}{pg}\frac{dp}{dt}
+\]
+
+
+$dz/dt$ is the rate of climb in terms of geometric altitude. For
+given climb conditions (T, p, and dp/dt), this only matches the climb
+rate in a standard atmosphere if the temperature equals that of a
+standard atmosphere, $T_{s}$. Otherwise, the error in rate-of-climb
+$w$ is:
+
+\[
+\frac{\delta w}{w}=\frac{R_{d}}{wpg}(T-T_{s})\frac{dp}{dt}=(\frac{T-T_{s}}{T})\,\,\,\,.
+\]
+
+
+As an extreme example, if the temperature is 20$^{\circ}$C different
+from a standard atmosphere and the climb rate is 10 m/s where the
+flight temperature is about -70$^{\circ}$C, the error is about 1
+m/s. This error enters directly into WI when calculated from VSPD.
+
 
 \section{Illustration of the problem}
 
-<<difference-VSPD-VSPD_G, include=TRUE, fig.cap="Comparison of VSPD and VSPD\\_G for HIPPO-2 flight 10.">>=
+<<difference-VSPD-VSPD_G, include=TRUE, fig.cap=c("Comparison of VSPD and VSPD\\_G for HIPPO-2 flight 10.", "VSPD vs.\ VSPD\\_G for the segment of flight 2, HIPPO-2, from 21:00:00 to 24:00:00 UTC")>>=
 
 Data$QR <- Data$ADIFR / Data$QCF
 Data$M  <- MachNumber(Data$PSF, Data$QCF)
@@ -130,19 +172,38 @@ Data$WI <- Data$VSPD + (Data$AK-Data$PITCH)*Data$TASX * pi / 180
 Data$Difference <- Data$VSPD_G - Data$VSPD
 Data$WIC <- Data$WI + Data$VSPD_G - Data$VSPD
 plotWAC(Data[, c("Time", "VSPD", "VSPD_G", "Difference")])
+v <- setRange(Data$Time, 210000,235959)
+DV <- Data[v, ]
+f <- lm(VSPD~VSPD_G, data=DV)
+# summary(f)
+cf <- coef(f)
+plot(DV$VSPD_G, DV$VSPD, type='p', pch=20, col='blue')
+lines(c(-20,20), c(-20,20), col='darkorange', lwd=2, lty=2)
+title (sprintf ("fit slope: %.2f", cf[2]))
 
 @
 
-Figure \ref{fig:difference-VSPD-VSPD_G} shows the two measurements
+Figure \ref{fig:difference-VSPD-VSPD_G1} shows the two measurements
 VSPD and VSPD\_G and also the difference between them. The difference
 is negatively correlated with VSPD and has a magnitude of around 1~m/s.
-This is then reflected in WI, and shown in Fig.~\ref{fig:example-of-errors},
-where the red trace is VSPD/10 to provide a reference for changes
-in rate-of-climb. With this atmospheric stratification, there is an
-obvious error in WI that is correlated with VSPD. Other HIPPO flights
-show similar errors, sometimes with positive correlation and sometimes
-with negative correlation between WI and VSPD depending on the atmospheric
-stratification. WIC, based on VSPD\_G, does not show this error.
+As shown also in Fig.~\ref{fig:difference-VSPD-VSPD_G2}, the magnitudes
+of VSPD and VSPD\_G are about 8\% different through the region from
+21:00:00 to 24:00:00. This difference then is reflected in WI, as
+shown by the blue line in Fig.~\ref{fig:example-of-errors}. In that
+figure, the red trace is VSPD/10 to provide a reference for changes
+in rate-of-climb, and errors in WI are clearly correlated with errors
+in VSPD. Because HIPPO flights encountered such a wide range of atmospheric
+soundings, other HIPPO flights show similar errors but sometimes with
+positive correlation and sometimes with negative correlation between
+WI and VSPD depending on the atmospheric stratification. WIC, based
+on VSPD\_G (the green line in Fig.~\ref{fig:example-of-errors}),
+does not show this error. The reason for this error is evident from
+Fig.~\ref{fig:sounding}, which shows the atmospheric sounding for
+the period of climbs and descents in this flight. This was a far-north
+leg in a cold atmosphere, as shown by the blue trace in that plot.
+The temperatures are far below the standard-atmosphere temperatures,
+shown as the red line, so that is the reason that VSPD is significantly
+different from VSPD\_G.
 
 <<example-of-errors, include=TRUE, fig.cap="WI for HIPPO-2 flight 10.">>=
 
@@ -151,7 +212,7 @@ lineWAC(Data$Time, Data$VSPD/10, col='red', lty=2)
 
 @
 
-<<sounding, include=TRUE, fig.cap="Sounding for the period from 21:00:00 to 24:00:00 on HIPPO-2 flight 10.">>=
+<<sounding, include=TRUE, fig.cap="Sounding for the period from 21:00:00 to 24:00:00 on HIPPO-2 flight 10. The red line is the temperature of a standard atmosphere.">>=
 
 source("SkewT.R")
 DS <- Data[setRange(Data$Time, 210000, 235959), c("PSXC", "ATX", "DPXC")]
@@ -167,9 +228,54 @@ for (i in 1:86) {
   if (P[i] < 226.3206) {T[i] <- 216.65 - 273.15}
 }
 ggAdd <- SkewTSounding(P, T, DP, ADD=TRUE)
-print(ggSpecs + geom_path (data = SkewTSounding (P, T, DP, ADD=TRUE), aes(x=T, y=P), col='red', lwd=1.5)
+print(ggSpecs + geom_path (data = SkewTSounding (P, T, DP, ADD=TRUE), aes(x=T, y=P), col='red', lwd=1.5))
 
 @
+
+
+\section{Possible solutions}
+
+<<roc-plot, include=TRUE, fig.cap="Same as for Fig.~\\\ref{fig:difference-VSPD-VSPD\\_G2} but for ROC vs VSPD\\_G.">>=
+
+TStdA <- function (PStdA) {
+  T <- 15.-0.0065 * PressureAltitude (PStdA)
+  T[(PStdA < 226.3206)] <- 216.65 - 273.15
+  return (T)
+}
+DV$ROC <- DV$VSPD * (DV$ATX + 273.15) / (TStdA(DV$PSXC) + 273.15)
+plot(DV$VSPD_G, DV$ROC, type='p', pch=20, col='blue')
+lines(c(-20,20), c(-20,20), col='darkorange', lwd=2, lty=2)
+fr <- lm(ROC~VSPD_G, data=DV)
+cfr <- coef(fr)
+title(sprintf("slope coefficient: %.2f", cfr[2]))
+
+@
+\begin{itemize}
+\item If we want to retain VSPD as a representation of the rate-of-climb,
+it should be multiplied by $T/T_{s}$where $T_{s}$ is the temperature
+in a standard atmosphere at the same pressure and both are expressed
+in absolute units (K). In that case we might want to introduce a new
+variable called ROC for rate-of-climb and calculate it from VSPD,
+ATX and PSXC from\end{itemize}
+\begin{lyxcode}
+ROC~=~VSPD~{*}~(ATX~+~273.15)~/~
+
+~~~~~~~~~~~~~(StandardAtmosphereTemperature~(PSXC)~+~273.15)
+
+
+
+Figure \ref{fig:roc-plot} shows that ROC calculated in this way matches
+VSPD\_G well.
+
+\end{lyxcode}
+\begin{itemize}
+\item Alternately we could drop WI and use only WIC based on a GPS-provided
+rate-of-climb. Because changing the definition of WI may be confusing,
+especially with differing definitions in use, I favor this. Maybe
+a compromise between these solutions is to define a new variable (WIR?)
+based on rate-of-climb represented by ROC.
+\end{itemize}
+\clearpage
 
 \begin{center}
 \textsf{\textcolor{blue}{-- End of Memo --}}
