--- a/UsingVSPDforWI.lyx
+++ b/UsingVSPDforWI.lyx
@@ -503,11 +503,18 @@ status open
 
 \begin_layout Plain Layout
 
-<<difference-VSPD-VSPD_G, include=TRUE, fig.cap="Comparison of VSPD and VSPD
+<<difference-VSPD-VSPD_G, include=TRUE, fig.cap=c("Comparison of VSPD and
+ VSPD
 \backslash
 
 \backslash
-_G for HIPPO-2 flight 10.">>=
+_G for HIPPO-2 flight 10.", "VSPD vs.
+\backslash
+ VSPD
+\backslash
+
+\backslash
+_G for the segment of flight 2, HIPPO-2, from 21:00:00 to 24:00:00 UTC")>>=
 \end_layout
 
 \begin_layout Plain Layout
@@ -556,6 +563,46 @@ plotWAC(Data[, c("Time", "VSPD", "VSPD_G", "Difference")])
 
 \begin_layout Plain Layout
 
+v <- setRange(Data$Time, 210000,235959)
+\end_layout
+
+\begin_layout Plain Layout
+
+DV <- Data[v, ]
+\end_layout
+
+\begin_layout Plain Layout
+
+f <- lm(VSPD~VSPD_G, data=DV)
+\end_layout
+
+\begin_layout Plain Layout
+
+# summary(f)
+\end_layout
+
+\begin_layout Plain Layout
+
+cf <- coef(f)
+\end_layout
+
+\begin_layout Plain Layout
+
+plot(DV$VSPD_G, DV$VSPD, type='p', pch=20, col='blue')
+\end_layout
+
+\begin_layout Plain Layout
+
+lines(c(-20,20), c(-20,20), col='darkorange', lwd=2, lty=2)
+\end_layout
+
+\begin_layout Plain Layout
+
+title (sprintf ("fit slope: %.2f", cf[2]))
+\end_layout
+
+\begin_layout Plain Layout
+
 \end_layout
 
 \begin_layout Plain Layout
@@ -577,7 +624,7 @@ status open
 
 
 \backslash
-ref{fig:difference-VSPD-VSPD_G}
+ref{fig:difference-VSPD-VSPD_G1}
 \end_layout
 
 \end_inset
@@ -590,7 +637,26 @@ ref{fig:difference-VSPD-VSPD_G}
 \end_inset
 
 m/s.
- This is then reflected in WI, as shown by the blue line in Fig.
+ As shown also in Fig.
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+ref{fig:difference-VSPD-VSPD_G2}
+\end_layout
+
+\end_inset
+
+, the magnitudes of VSPD and VSPD_G are about 8% different through the region
+ from 21:00:00 to 24:00:00.
+ This difference then is reflected in WI, as shown by the blue line in Fig.
 \begin_inset space ~
 \end_inset
 
@@ -805,7 +871,103 @@ print(ggSpecs + geom_path (data = SkewTSounding (P, T, DP, ADD=TRUE), aes(x=T,
 Possible solutions
 \end_layout
 
-\begin_layout Enumerate
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<<roc-plot, include=TRUE, fig.cap="Same as for Fig.~
+\backslash
+
+\backslash
+
+\backslash
+ref{fig:difference-VSPD-VSPD
+\backslash
+
+\backslash
+_G2} but for ROC vs VSPD
+\backslash
+
+\backslash
+_G.">>=
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+TStdA <- function (PStdA) {
+\end_layout
+
+\begin_layout Plain Layout
+
+  T <- 15.-0.0065 * PressureAltitude (PStdA)
+\end_layout
+
+\begin_layout Plain Layout
+
+  T[(PStdA < 226.3206)] <- 216.65 - 273.15
+\end_layout
+
+\begin_layout Plain Layout
+
+  return (T)
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+DV$ROC <- DV$VSPD * (DV$ATX + 273.15) / (TStdA(DV$PSXC) + 273.15)
+\end_layout
+
+\begin_layout Plain Layout
+
+plot(DV$VSPD_G, DV$ROC, type='p', pch=20, col='blue')
+\end_layout
+
+\begin_layout Plain Layout
+
+lines(c(-20,20), c(-20,20), col='darkorange', lwd=2, lty=2)
+\end_layout
+
+\begin_layout Plain Layout
+
+fr <- lm(ROC~VSPD_G, data=DV)
+\end_layout
+
+\begin_layout Plain Layout
+
+cfr <- coef(fr)
+\end_layout
+
+\begin_layout Plain Layout
+
+title(sprintf("slope coefficient: %.2f", cfr[2]))
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+@
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
 If we want to retain VSPD as a representation of the rate-of-climb, it should
  be multiplied by 
 \begin_inset Formula $T/T_{s}$
@@ -826,10 +988,33 @@ ROC = VSPD * (ATX + 273.15) /
 \end_layout
 
 \begin_layout LyX-Code
-             (StandardAtmosphereTemperature (PSXC) + 273.15).
+             (StandardAtmosphereTemperature (PSXC) + 273.15)
 \end_layout
 
-\begin_layout Enumerate
+\begin_layout LyX-Code
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+Figure 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+ref{fig:roc-plot}
+\end_layout
+
+\end_inset
+
+ shows that ROC calculated in this way matches VSPD_G well.
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
 Alternately we could drop WI and use only WIC based on a GPS-provided rate-of-cl
 imb.
  Because changing the definition of WI may be confusing, especially with
